fix: restore dustland module content

--- a/adventure-kit.html
+++ b/adventure-kit.html
@@ -876,6 +876,7 @@
   <script defer src="./scripts/event-bus.js"></script>
   <script defer src="./scripts/supporting/chiptune.js"></script>
   <script defer src="./scripts/core/effects.js"></script>
+  <script defer src="./scripts/core/module-behaviors.js"></script>
   <script defer src="./scripts/core/inventory.js"></script>
   <script defer src="./scripts/core/actions.js"></script>
   <script defer src="./scripts/core/movement.js"></script>
