--- a/balance-tester.html
+++ b/balance-tester.html
@@ -182,6 +182,7 @@
   <script defer src="./scripts/supporting/chiptune.js"></script>
   <script defer src="./scripts/ui.js"></script>
   <script defer src="./scripts/core/effects.js"></script>
+  <script defer src="./scripts/core/module-behaviors.js"></script>
   <script defer src="./scripts/core/inventory.js"></script>
   <script defer src="./scripts/core/equipment.js"></script>
   <script defer src="./scripts/core/actions.js"></script>
