--- a/game.html
+++ b/game.html
@@ -721,6 +721,7 @@
   <script defer src="./scripts/ui.js"></script>
   <script defer src="./scripts/core/item-generator.js"></script>
   <script defer src="./scripts/core/effects.js"></script>
+  <script defer src="./scripts/core/module-behaviors.js"></script>
   <script defer src="./scripts/core/spoils-cache.js"></script>
   <script defer src="./scripts/core/inventory.js"></script>
   <script defer src="./scripts/core/equipment.js"></script>
