fix: hide npc dialog field when tree complex

--- a/adventure-kit.html
+++ b/adventure-kit.html
@@ -489,6 +489,7 @@
           </div>
           <button class="btn" type="button" id="npcPick" title="Click on the map to choose location">Select on Map</button>
           <label>Dialog<textarea id="npcDialog" rows="2"></textarea></label>
+          <div id="npcDialogHint" class="small" style="display:none">Dialog text is set in the dialog tree.</div>
           <label>Quests<select id="npcQuests" multiple size="3"></select></label>
           <button class="btn" type="button" id="genQuestDialog" style="display:none">Generate Quest Dialog</button>
           <div id="questTextWrap" style="display:none">
