fix: keep multiplayer relay alive for module pick

--- a/multiplayer.html
+++ b/multiplayer.html
@@ -89,6 +89,8 @@
     <div class="status" id="joinStatus"></div>
   </section>
 
+  <script defer src="./scripts/event-bus.js"></script>
+  <script defer src="./scripts/supporting/multiplayer-bridge.js"></script>
   <script defer src="./scripts/supporting/multiplayer-sync.js"></script>
   <script defer src="./scripts/multiplayer.js"></script>
   <script defer src="./scripts/supporting/multiplayer-lobby.js"></script>
