--- a/dustland.html
+++ b/dustland.html
@@ -325,6 +325,7 @@
   </div>
 
     <script defer src="./scripts/event-bus.js"></script>
+    <script defer src="./scripts/supporting/multiplayer-bridge.js"></script>
     <script defer src="./scripts/supporting/multiplayer-sync.js"></script>
     <script defer src="./scripts/multiplayer.js"></script>
     <script defer src="./scripts/supporting/chiptune.js"></script>
