fix: clamp quest xp rewards

--- a/adventure-kit.html
+++ b/adventure-kit.html
@@ -707,7 +707,7 @@
               </div>
             </div>
           </div>
-          <label>XP Reward<input id="questXP" type="number" min="0" /></label>
+          <label>XP Reward<input id="questXP" type="number" min="10" max="100" value="10" /></label>
           <label>NPC<select id="questNPC">
               <option value="">(none)</option>
             </select></label>
