feat: add quick sell actions for junk and caches

--- a/dustland.html
+++ b/dustland.html
@@ -459,6 +459,10 @@
         </div>
         <div class="player-inv">
           <h2>Sell</h2>
+          <div id="shopSellActions" class="shop-actions">
+            <button id="sellJunkBtn" class="btn">Sell Junk</button>
+            <button id="sellCachesBtn" class="btn">Sell Caches</button>
+          </div>
           <div id="shopSell" class="slot-list"></div>
         </div>
       </div>
