fix: enable camp fast travel access

--- a/dustland.html
+++ b/dustland.html
@@ -429,7 +429,10 @@
     <div class="persona-window">
       <h2>Equip Persona</h2>
       <div id="personaList" class="persona-list"></div>
-      <button id="closePersonaBtn" class="btn">Close</button>
+      <div class="persona-actions">
+        <button id="campFastTravelBtn" class="btn">Fast Travel</button>
+        <button id="closePersonaBtn" class="btn">Close</button>
+      </div>
     </div>
   </div>
   <!-- Workbench overlay -->
