feat: add shop slot filters

--- a/dustland.html
+++ b/dustland.html
@@ -455,6 +455,12 @@
         <div id="shopGrudge"></div>
         <button id="closeShopBtn" class="btn">Close</button>
       </header>
+      <div class="shop-filters">
+        <label for="shopSlotFilter">Slot</label>
+        <select id="shopSlotFilter">
+          <option value="">All Slots</option>
+        </select>
+      </div>
       <div class="shop-panels">
         <div class="shop-inv">
           <h2>Buy</h2>
