--- a/dustland.html
+++ b/dustland.html
@@ -4,7 +4,7 @@
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no, maximum-scale=1" />
   <title>Dustland: CRT Edition</title>
-  <link href="https://fonts.googleapis.com/css2?family=Pixelify+Sans&display=swap" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css2?family=Atkinson+Hyperlegible:wght@400;700&family=Oxanium:wght@400;600;700&family=Pixelify+Sans:wght@400;700&family=Roboto:wght@400;700&display=swap" rel="stylesheet">
   <link rel="stylesheet" href="dustland.css" />
 </head>
 <body>
@@ -135,6 +135,16 @@
           <label for="fontScale">Font Scale</label>
           <input type="range" id="fontScale" min="1" max="1.75" step="0.05" value="1" />
           <div class="small" id="fontScaleValue">100%</div>
+        </div>
+        <div class="field">
+          <label for="fontFamily">UI Font</label>
+          <select id="fontFamily">
+            <option value="pixel">Pixelify Sans (Retro)</option>
+            <option value="oxanium">Oxanium (Tech)</option>
+            <option value="atkinson">Atkinson Hyperlegible (Readable)</option>
+            <option value="roboto">Roboto (Modern)</option>
+          </select>
+          <div class="small" id="fontFamilySample">Sample: The wasteland is calling.</div>
         </div>
         <div class="field">
           <label id="playerIconLabel">Player Icon</label>
