feat: add fog of war toggle

--- a/game.html
+++ b/game.html
@@ -494,7 +494,7 @@
               <div class="badge alt-badge">Scrap: <span id="scrap">0</span></div>
               <div class="badge alt-badge">Map: <span id="mapname">—</span></div>
             </div>
-            <p class="muted alt-muted">Controls: <b>WASD/Arrows</b> move • <b>E/Space</b> interact &amp; take • <b>T/G</b> take item • <b>I</b> Inventory • <b>P</b> Party • <b>Q</b> Quests • <b>O</b> audio • <b>C</b> mobile controls • <b>M</b> minimap • <b>Esc</b> close</p>
+            <p class="muted alt-muted">Controls: <b>WASD/Arrows</b> move • <b>E/Space</b> interact &amp; take • <b>T/G</b> take item • <b>I</b> Inventory • <b>P</b> Party • <b>Q</b> Quests • <b>O</b> audio • <b>C</b> mobile controls • <b>F</b> fog of war • <b>M</b> minimap • <b>Esc</b> close</p>
             <div class="tabs alt-tabs" role="tablist">
               <div class="tab active" id="tabInv" role="tab" tabindex="0" aria-label="Inventory" aria-selected="true">Inventory</div>
               <div class="tab" id="tabParty" role="tab" tabindex="0" aria-label="Party" aria-selected="false">Party</div>
@@ -618,6 +618,7 @@
         <button class="btn" id="musicToggle">Music: Off</button>
         <button class="btn" id="mobileToggle">Mobile Controls: Off</button>
         <button class="btn" id="tileCharToggle">ASCII Tiles: On</button>
+        <button class="btn" id="fogToggle">Fog of War: On</button>
         <div class="field">
           <label for="fontScale">Font Scale</label>
           <input type="range" id="fontScale" min="1" max="1.75" step="0.05" value="1" />
