--- a/dustland.html
+++ b/dustland.html
@@ -131,6 +131,7 @@
         <button class="btn" id="musicToggle">Music: Off</button>
         <button class="btn" id="mobileToggle">Mobile Controls: Off</button>
         <button class="btn" id="tileCharToggle">ASCII Tiles: On</button>
+        <button class="btn" id="fogToggle">Fog of War: On</button>
         <div class="field">
           <label for="fontScale">Font Scale</label>
           <input type="range" id="fontScale" min="1" max="1.75" step="0.05" value="1" />
