--- a/dustland.html
+++ b/dustland.html
@@ -177,13 +177,13 @@
   </div>
 
   <div id="tilePreview" role="dialog" aria-modal="true" aria-hidden="true" style="display:none">
-    <div class="win tile-preview" data-skin-slot="tile-preview-window">
-      <header data-skin-slot="tile-preview-header" data-skin-label="window-title">Tile Preview</header>
-      <main data-skin-slot="tile-preview-body">
-        <div class="tile-preview__grid" id="tilePreviewGrid" data-skin-slot="tile-preview-grid"></div>
+    <div class="win tile-preview" data-skin-slot="preview-window">
+      <header data-skin-slot="preview-header" data-skin-label="window-title">Tile Preview</header>
+      <main data-skin-slot="preview-body">
+        <div class="tile-preview__grid" id="tilePreviewGrid" data-skin-slot="preview-grid"></div>
         <div class="small tile-preview__empty" id="tilePreviewEmpty" data-skin-label="field-note">Load a skin with terrain tiles to preview them here.</div>
       </main>
-      <div class="footer" data-skin-slot="tile-preview-footer">
+      <div class="footer" data-skin-slot="preview-footer">
         <button class="btn" id="tilePreviewClose" data-skin-label="button-label">Close</button>
       </div>
     </div>
