fix: track tile rendering cost

--- a/dustland.html
+++ b/dustland.html
@@ -271,6 +271,7 @@
         <div data-skin-label="field-note">SFX: <span id="perfSfx">0</span>ms</div>
         <div data-skin-label="field-note">Path: <span id="perfPath">0</span>ms</div>
         <div data-skin-label="field-note">AI: <span id="perfAI">0</span>ms</div>
+        <div data-skin-label="field-note">Tiles: <span id="perfTiles">0</span>ms</div>
         <button class="btn" id="perfClose" data-skin-label="button-label">Close</button>
       </main>
     </div>
