--- a/game.html
+++ b/game.html
@@ -723,6 +723,7 @@
         <div>SFX: <span id="perfSfx">0</span>ms</div>
         <div>Path: <span id="perfPath">0</span>ms</div>
         <div>AI: <span id="perfAI">0</span>ms</div>
+        <div>Tiles: <span id="perfTiles">0</span>ms</div>
         <button class="btn" id="perfClose">Close</button>
       </main>
     </div>
