feat: type item generator globals

--- a/dustland.html
+++ b/dustland.html
@@ -366,6 +366,7 @@
     <script defer src="./scripts/supporting/chiptune.js"></script>
     <script defer src="./scripts/fx-config.js"></script>
     <script defer src="./scripts/ui.js"></script>
+    <script defer src="./scripts/core/globals.js"></script>
     <script defer src="./scripts/core/item-generator.js"></script>
     <script defer src="./scripts/core/effects.js"></script>
     <script defer src="./scripts/core/module-behaviors.js"></script>
