fix: polish npc placement flow

--- a/adventure-kit.html
+++ b/adventure-kit.html
@@ -518,7 +518,10 @@
             <label>Op<select id="npcOp"><option value=">=">&ge;</option><option value=">">&gt;</option><option value="==">==</option><option value="!=">!=</option><option value="<=">&le;</option><option value="<">&lt;</option></select></label>
             <label>Value<input id="npcVal" type="number" value="1" /></label>
           </div>
-          <button class="btn" type="button" id="npcPick" title="Click on the map to choose location">Select on Map</button>
+          <div class="row" style="gap:6px;align-items:center;margin-bottom:6px;flex-wrap:wrap">
+            <button class="btn" type="button" id="npcPick" title="Click on the map to choose location">Select on Map</button>
+            <button class="btn" type="button" id="npcCancelPick" style="display:none">Cancel Placement</button>
+          </div>
           <label>Dialog<textarea id="npcDialog" rows="2"></textarea></label>
           <div id="npcDialogHint" class="small" style="display:none">Dialog text is set in the dialog tree.</div>
           <label>Quests<select id="npcQuests" multiple size="3"></select></label>
@@ -533,7 +536,7 @@
             <label>ATK<input id="npcATK" type="number" min="0" value="0" /></label>
             <label>DEF<input id="npcDEF" type="number" min="0" value="0" /></label>
             <label>Loot<input id="npcLoot" /></label>
-            <label>Loot %<input id="npcLootChance" type="number" min="0" max="100" value="100" /></label>
+            <label>Loot %<input id="npcLootChance" type="number" min="0" max="100" value="" /></label>
             <label><input type="checkbox" id="npcBoss" /> Boss</label>
             <label>Special Cue<input id="npcSpecialCue" /></label>
             <label>Special DMG<input id="npcSpecialDmg" type="number" min="0" /></label>
